--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="row">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, tempore?
+
+        </div>
+    </div>
 
 </body>
 
